--- a/Infrastructure/Store.API.Persistence/Store.API.Persistence.csproj
+++ b/Infrastructure/Store.API.Persistence/Store.API.Persistence.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\..\Core\Services\Store.API.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.21" />
+  </ItemGroup>
+
 </Project>
