--- a/Core/Services/Store.API.Services.csproj
+++ b/Core/Services/Store.API.Services.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="15.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Store.API.Domain\Store.API.Domain.csproj" />
     <ProjectReference Include="..\Store.API.Services.Abstractions\Store.API.Services.Abstractions.csproj" />
   </ItemGroup>
