--- a/Store.API.Web/appsettings.json
+++ b/Store.API.Web/appsettings.json
@@ -7,6 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection" : "Server = .; Database = Store.API.App; Trusted_Connection = True; TrustServerCertificate = True;"
-  }
+    "DefaultConnection": "Server = .; Database = Store.API.App; Trusted_Connection = True; TrustServerCertificate = True;"
+  },
+
+  "BaseUrl": "https://localhost:7018"
 }
