Added Auth Module, finished Login, Regsiter

--- a/Store.API.Web/appsettings.json
+++ b/Store.API.Web/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server = .; Database = Store.API.App; Trusted_Connection = True; TrustServerCertificate = True;",
+    "IdentityConnection": "Server = .; Database = Store.API.Identity; Trusted_Connection = True; TrustServerCertificate = True;",
     "RedisConnection" : "localhost"
   },
 
