--- a/Core/Store.API.Services.Abstractions/Store.API.Services.Abstractions.csproj
+++ b/Core/Store.API.Services.Abstractions/Store.API.Services.Abstractions.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Stripe.net" Version="49.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Store.API.Shared\Store.API.Shared.csproj" />
   </ItemGroup>
 
